# resourceschedule_qos_manager

./: .gitignore  119.diff:Zone.Identifier  CODEOWNERS  OAT.xml  README.en.md  README.md  README_zh.md  RELEASE-NOTES.md  bundle.json  c++.diff
common/include/: concurrent_task_utils.h  config_reader.h
common/src/: concurrent_task_utils.cpp  config_reader.cpp
etc/init/: BUILD.gn  concurrent_task_service.cfg
etc/param/: BUILD.gn  ffrt.para  ffrt.para.dac
frameworks/concurrent_task_client/: BUILD.gn  libconcurrent_task_client.versionscript
frameworks/concurrent_task_client/idl/: ConcurrentTaskIdlTypes.idl  IConcurrentTaskService.idl
frameworks/concurrent_task_client/include/: concurrent_task_errors.h  concurrent_task_service_ipc_interface_code.h  concurrent_task_service_proxy.h  concurrent_task_type.h  iconcurrent_task_service.h
frameworks/concurrent_task_client/src/: concurrent_task_client.cpp  concurrent_task_service_proxy.cpp
frameworks/native/: BUILD.gn  qos_ndk.cpp
include/: concurrent_task_log.h  ipc_util.h
interfaces/inner_api/: concurrent_task_client.h  concurrent_task_type.h  pi_mutex.h  qos.h
interfaces/kits/: BUILD.gn  libqos.ndk.json
interfaces/kits/c/: qos.h
patches/: patches.json  rich.patch
profiles/: BUILD.gn  qos_manager_config.xml
qos/: BUILD.gn  qos.cpp
sa_profile/: 1912.json  1912.xml  BUILD.gn
services/: BUILD.gn
services/include/: concurrent_task_controller.h  concurrent_task_controller_interface.h  concurrent_task_service.h  concurrent_task_service_ability.h  concurrent_task_service_stub.h  func_loader.h  qos_interface.h  qos_manager.h  qos_policy.h
services/src/: concurrent_task_controller.cpp  concurrent_task_controller_interface.cpp  concurrent_task_service.cpp  concurrent_task_service_ability.cpp  concurrent_task_service_stub.cpp  func_loader.cpp  qos_interface.cpp  qos_manager.cpp  qos_policy.cpp
test/: BUILD.gn
test/fuzztest/: BUILD.gn
test/fuzztest/comprehensive_ipc_fuzzer/: BUILD.gn  comprehensive_ipc_fuzzer.cpp  comprehensive_ipc_fuzzer.h  project.xml
test/fuzztest/comprehensive_ipc_fuzzer/corpus/: init
test/fuzztest/concurrent_fuzzer/: .concurrent_fuzzer.cpp.swp  BUILD.gn  concurrent_fuzzer.cpp  project.xml
test/fuzztest/qos_fuzzer/: BUILD.gn  project.xml  qos_fuzzer.cpp  qos_fuzzer.h
test/fuzztest/qos_low_level_fuzzer/: BUILD.gn  qos_low_level_fuzzer.cpp  qos_low_level_fuzzer.h
test/fuzztest/qos_manager_fuzzer/: BUILD.gn  qos_manager_fuzzer.cpp  qos_manager_fuzzer.h
test/fuzztest/qos_policy_fuzzer/: BUILD.gn  project.xml  qos_policy_fuzzer.cpp  qos_policy_fuzzer.h
test/fuzztest/qos_policy_fuzzer/corpus/: init
test/fuzztest/rtg_operations_fuzzer/: BUILD.gn  project.xml  rtg_operations_fuzzer.cpp  rtg_operations_fuzzer.h
test/fuzztest/rtg_operations_fuzzer/corpus/: init
test/fuzztest/template_fuzzer/: BUILD.gn  template_fuzzer.cpp  template_fuzzer.h
test/fuzztest/template_fuzzer/corpus/: init
test/fuzztest/utils_fuzzer/: BUILD.gn  project.xml  utils_fuzzer.cpp  utils_fuzzer.h
test/fuzztest/utils_fuzzer/corpus/: init
test/unittest/phone/: concurrent_svc_intf_test.cpp  concurrent_task_client_test.cpp  concurrent_task_controller_interface_test.cpp  concurrent_task_controller_test.cpp  concurrent_task_service_ability_test.cpp  concurrent_task_service_test.cpp  config_reader_test.cpp  func_loader_test.cpp  qos_interface_test.cpp  qos_manager_test.cpp  qos_ndk_test.cpp  qos_policy_test.cpp  qos_test.cpp
