# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("qos_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "../include/",
    "../interfaces/inner_api/",
    "../services/include/",
  ]
}

ohos_shared_library("qos") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  public_configs = [ ":qos_config" ]
  sources = [
    "../services/src/qos_interface.cpp",
    "qos.cpp",
  ]

  if (defined(
      global_parts_info.hmosresourceschedule_frame_aware_sched_override)) {
    defines = [ "QOS_EXT_ENABLE" ]
  }

  external_deps = [
    "hilog:libhilog",
    "init:libbegetutil",
  ]

  subsystem_name = "resourceschedule"
  part_name = "qos_manager"
}
