# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")

config("client_private_config") {
  cflags_cc = [ "-fexceptions" ]
  include_dirs = [
    "../../include",
    "../../services/include",
  ]
}

config("client_public_config") {
  visibility = [ ":*" ]
  cflags = [ "-fstack-protector-strong" ]
  include_dirs = [
    "include",
    "../../interfaces/inner_api/",
  ]
}

ohos_shared_library("concurrent_task_client") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  configs = [ ":client_private_config" ]

  public_configs = [ ":client_public_config" ]

  sources = [
    "src/concurrent_task_client.cpp",
    "src/concurrent_task_service_proxy.cpp",
  ]

  public_external_deps = [ "jsoncpp:jsoncpp" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]

  subsystem_name = "resourceschedule"
  part_name = "qos_manager"
}
