# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")

ohos_shared_library("qos_ndk") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  include_dirs = [
    "../../interfaces/",
    "../../interfaces/kits/c/",
  ]

  sources = [ "qos_ndk.cpp" ]

  deps = [ "../../qos:qos" ]

  output_name = "qos"
  output_extension = "so"

  innerapi_tags = [ "ndk" ]
  subsystem_name = "resourceschedule"
  part_name = "qos_manager"
}
