# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")

ohos_fuzztest("ConcurrentFuzzTest") {
  module_out_path = "qos_manager/qos_manager/"
  fuzz_config_file = "../../../test/fuzztest/concurrent_fuzzer"
  include_dirs = [
    "../../../include/",
    "../../../interfaces/inner_api/",
    "../../../frameworks/concurrent_task_client/include/",
    "../../../services/include/",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "concurrent_fuzzer.cpp" ]
  defines = []
  deps = [
    "../../../frameworks/concurrent_task_client:concurrent_task_client",
    "../../../qos:qos",
    "../../../services:concurrentsvc",
  ]
  external_deps = [
    "access_token:libaccesstoken_sdk",
    "c_utils:utils",
    "frame_aware_sched:rtg_interface",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "init:libbegetutil",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}
